# Bobcat

./: .env.example  Cargo.toml  Makefile  README.md  techstack.md  techstack.yml
src/: main.rs
src/mod/: environ.rs
src/pkg/: environ.rs  mod.rs  server.rs  smtp.rs  util.rs  worker.rs
