[package]
name = "bobcat"
version = "0.1.0"
authors = ["Clivern <hello@clivern.com>"]
edition = "2018"
description = "A Public SMTP Server to forward Messages into A Backend System"
license = "MIT"
repository = "https://github.com/Norwik/Bobcat"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.0", features = ["full"] }
rand = "0.8"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
sqlite = "0.36.0"
uuid = {version = "1.6.1", features = ["v4", "fast-rng", "macro-diagnostics"]}
